@@ -1,3 +1,10 @@
+2018-09-16  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/86484
+	PR fortran/84543
+	* gfortran.dg/class_assign_2.f90: New test case.
+	* gfortran.dg/class_assign_3.f90: New test case.
+
 2018-09-15  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gcc.c-torture/compile/20180915-1.c: New test.
